[package]
name = "www-yuzonightly-com"
version = "0.1.0"
authors = ["YuzoNightly"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
rocket = "0.4"
toml = "0.5"
fluent = "0.12"
fluent-bundle = "0.6.0"
fluent-syntax = "0.9.3"
fluent-locale = "0.10.1"
handlebars-fluent = "0.3.0"
regex = "1"
serde_yaml = "0.8.13"
sass-rs = "0.2.1"
handlebars = "1.1.0"
serde_json = "1.0"
percent-encoding = "2.1.0"
siphasher = "0.3.3"
reqwest = { version = "0.10.8", features = ["blocking", "json"] }

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["handlebars_templates"]
